# planerek

./: .gitignore  main.py  pyproject.toml  Önslelista_på_utseende_och_features.docx
app/dtypes/: Route.py  edges.py  nodes.py
app/scripts/: calculate_route.py  edge_operations.py  node_operations.py
app/scripts/database/: PostgresClient.py  crud_operations.py  fill_database.py  fill_database_csv.py
app/scripts/geopackage/: display_geopackage.py
app/scripts/route_calculations/: Dijkstras.py  calculate_route.py
app/tests/: test_validate_nodes_and_routes.py
database_csv/: edges_manual.csv  nodes.csv  routes_manual.csv
dtypes/: noderelated.py  nodes.py  routes.py
kartdata/vekt_100/hojd_ln25/: hojd_ln25.gpkg:Zone.Identifier
kartdata/vekt_100/mark_ln25/: mark_ln25.gpkg:Zone.Identifier
scripts/: calculate_route.py  createsarekcoords.py  node_operations.py  route_operations.py  shortest_way.py
scripts/database/: crud_operations.py  fill_database.py
scripts/geopackage/: filter_geopackage.py
tests/: validate_nodes_and_routes.py
