[tool.poetry]
name = "planerek"
version = "0.1.0"
description = ""
authors = ["poetry config virtualenvs.in-project true"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
geopandas = "^0.14.4"
folium = "^0.16.0"
sqlalchemy = "^2.0.30"
psycopg2 = "^2.9.9"
pandas-stubs = "^2.2.2.240603"
pydantic = "^2.7.4"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79